crates/reverb-core/src/ytdlp/args/snapshots/reverb_core__ytdlp__args__tests__analisar_video.snap
---
source: crates/reverb-core/src/ytdlp/args/tests.rs
expression: "render(&analyze_video_args(&ctx(), URL))"
---
--ignore-config
--color
never
--js-runtimes
deno:/tools/deno
--ffmpeg-location
/tools/ffmpeg
-J
--no-playlist
--
https://www.youtube.com/watch?v=jNQXAC9IVRw
