crates/reverb-core/src/ytdlp/args/snapshots/reverb_core__ytdlp__args__tests__buscar_no_youtube.snap
---
source: crates/reverb-core/src/ytdlp/args/tests.rs
expression: render(&args)
---
--ignore-config
--color
never
--js-runtimes
deno:/tools/deno
--ffmpeg-location
/tools/ffmpeg
-J
--flat-playlist
--
ytsearch10:rick astley
