crates/reverb-core/src/ytdlp/args/snapshots/reverb_core__ytdlp__args__tests__caminhos_com_espacos_e_acentos_sao_um_unico_argumento.snap
---
source: crates/reverb-core/src/ytdlp/args/tests.rs
expression: render(&args)
---
--ignore-config
--color
never
--js-runtimes
deno:C:/Users/Jean Carlos de Souza/Música Teste ç/deno.exe
--ffmpeg-location
C:/Users/Jean Carlos de Souza/Música Teste ç/ferramentas/ffmpeg
--cookies
C:/Users/Jean Carlos de Souza/Música Teste ç/cookies.txt
--no-playlist
--newline
--progress
-f
bestaudio[format_id!*=-drc]/bestaudio
-x
--audio-format
best
--progress-template
download:REVERB_PROGRESS %(progress)j
--print
after_move:REVERB_DONE %(.{id,title,filepath,ext,abr,acodec,format_id,duration})j
-o
C:/Users/Jean Carlos de Souza/Música Teste ç/tmp/job 1/%(id)s.%(ext)s
--
https://www.youtube.com/watch?v=jNQXAC9IVRw
